[gd_scene load_steps=52 format=2]

[ext_resource path="res://Assets/NPCs/Enchanted Forest - Individual Frames/Wizard/Wizard_Idle + Walk_1.png" type="Texture" id=1]
[ext_resource path="res://Assets/NPCs/Enchanted Forest - Individual Frames/Wizard/Wizard_Idle + Walk_3.png" type="Texture" id=2]
[ext_resource path="res://Assets/NPCs/Enchanted Forest - Individual Frames/Wizard/Wizard_Idle + Walk_4.png" type="Texture" id=3]
[ext_resource path="res://Assets/NPCs/Enchanted Forest - Individual Frames/Wizard/Wizard_Idle + Walk_2.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Weapons/Base/Weapon.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Weapons/Staffs/BasicFireStaff.tres" type="Resource" id=6]
[ext_resource path="res://Assets/NPCs/Fantasy RPG NPCs - Individuel Frames/Knight - Standard/Knight_Idle_4.png" type="Texture" id=7]
[ext_resource path="res://Assets/NPCs/Fantasy RPG NPCs - Individuel Frames/Knight - Standard/Knight_Walk_3.png" type="Texture" id=8]
[ext_resource path="res://Scenes/Player/Player.gd" type="Script" id=9]
[ext_resource path="res://Assets/NPCs/Fantasy RPG NPCs - Individuel Frames/Knight - Standard/Knight_Walk_1.png" type="Texture" id=10]
[ext_resource path="res://Assets/NPCs/Fantasy RPG NPCs - Individuel Frames/Knight - Standard/Knight_Walk_2.png" type="Texture" id=11]
[ext_resource path="res://Assets/NPCs/Fantasy RPG NPCs - Individuel Frames/Knight - Standard/Knight_Walk_4.png" type="Texture" id=12]
[ext_resource path="res://Assets/NPCs/Fantasy RPG NPCs - Individuel Frames/Knight - Standard/Knight_Idle_3.png" type="Texture" id=13]
[ext_resource path="res://Assets/NPCs/Fantasy RPG NPCs - Individuel Frames/Knight - Standard/Knight_Idle_1.png" type="Texture" id=14]
[ext_resource path="res://Assets/NPCs/Fantasy RPG NPCs - Individuel Frames/Knight - Standard/Knight_Idle_2.png" type="Texture" id=15]
[ext_resource path="res://Scenes/Player/Classes/NoClass.tres" type="Resource" id=16]
[ext_resource path="res://Assets/NPCs/doc (1).png" type="Texture" id=17]
[ext_resource path="res://WhiteColor.shader" type="Shader" id=18]
[ext_resource path="res://Scenes/Player/audio_gemido_anime_-1949929860160686860.wav" type="AudioStream" id=19]
[ext_resource path="res://Scenes/Overlap/Stats.tscn" type="PackedScene" id=25]
[ext_resource path="res://Scenes/Overlap/Hurtbox.tscn" type="PackedScene" id=26]
[ext_resource path="res://UI/BarUI.tscn" type="PackedScene" id=27]
[ext_resource path="res://Assets/NPCs/Fantasy RPG NPCs - Individuel Frames/Herald/Herald_Walk_4.png" type="Texture" id=28]
[ext_resource path="res://Assets/NPCs/Fantasy RPG NPCs - Individuel Frames/Herald/Herald_Walk_3.png" type="Texture" id=29]
[ext_resource path="res://Assets/NPCs/Fantasy RPG NPCs - Individuel Frames/Herald/Herald_Walk_2.png" type="Texture" id=30]
[ext_resource path="res://Assets/NPCs/Fantasy RPG NPCs - Individuel Frames/Herald/Herald_Walk_1.png" type="Texture" id=31]
[ext_resource path="res://Assets/NPCs/Fantasy RPG NPCs - Individuel Frames/Herald/Herald_Idle_3.png" type="Texture" id=32]
[ext_resource path="res://Assets/NPCs/Fantasy RPG NPCs - Individuel Frames/Herald/Herald_Idle_4.png" type="Texture" id=33]
[ext_resource path="res://Assets/NPCs/Fantasy RPG NPCs - Individuel Frames/Herald/Herald_Idle_2.png" type="Texture" id=34]
[ext_resource path="res://Assets/NPCs/Fantasy RPG NPCs - Individuel Frames/Herald/Herald_Idle_1.png" type="Texture" id=35]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 18 )
shader_param/active = false

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 18 )
shader_param/active = false

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 13 ), ExtResource( 15 ), ExtResource( 7 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 8 ), ExtResource( 12 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 18 )
shader_param/active = false

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 17 )
region = Rect2( 0, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 17 )
region = Rect2( 16, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 17 )
region = Rect2( 32, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 17 )
region = Rect2( 48, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 17 )
region = Rect2( 64, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 17 )
region = Rect2( 80, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 17 )
region = Rect2( 96, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 17 )
region = Rect2( 112, 0, 16, 32 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="ShaderMaterial" id=15]
shader = ExtResource( 18 )
shader_param/active = false

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ ExtResource( 35 ), ExtResource( 34 ), ExtResource( 32 ), ExtResource( 33 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 31 ), ExtResource( 30 ), ExtResource( 29 ), ExtResource( 28 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="Animation" id=17]

[sub_resource type="Animation" id=18]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("WarriorAnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("NecromancerAnimatedSprite:material:shader_param/active")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MageAnimatedSprite:material:shader_param/active")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[sub_resource type="Animation" id=19]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("WarriorAnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="CapsuleShape2D" id=20]
radius = 7.26486
height = 0.0

[sub_resource type="CapsuleShape2D" id=21]
height = 6.0

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
script = ExtResource( 9 )
playerClass = ExtResource( 16 )

[node name="Stats" parent="." instance=ExtResource( 25 )]

[node name="StopTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="MageAnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
material = SubResource( 1 )
frames = SubResource( 2 )
animation = "idle"
frame = 1
playing = true
offset = Vector2( 0, -10 )

[node name="WarriorAnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
material = SubResource( 3 )
frames = SubResource( 4 )
animation = "idle"
frame = 3
playing = true
offset = Vector2( 0, -10 )

[node name="NecromancerAnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
material = SubResource( 5 )
position = Vector2( 0, -1 )
frames = SubResource( 14 )
animation = "idle"
frame = 2
playing = true
offset = Vector2( 0, -10 )

[node name="NoClassAnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 15 )
position = Vector2( 0, -10 )
frames = SubResource( 16 )
animation = "walk"
frame = 1
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/WarriorMeleeAttack = SubResource( 17 )

[node name="BlinkAnimationPlayer" type="AnimationPlayer" parent="."]
anims/Start = SubResource( 18 )
anims/Stop = SubResource( 19 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 2 )
shape = SubResource( 20 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.35, 0.35 )

[node name="Weapon" parent="." groups=[
"Weapon",
] instance=ExtResource( 5 )]
position = Vector2( 0, -1 )
weapon = ExtResource( 6 )

[node name="Hurtbox" parent="." groups=[
"PlayerHurtbox",
] instance=ExtResource( 26 )]
position = Vector2( 0, -10 )
collision_layer = 16
collision_mask = 128

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, 5 )
shape = SubResource( 21 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BarUI" parent="CanvasLayer" instance=ExtResource( 27 )]
margin_left = 20.0
margin_right = -923.0
margin_bottom = -584.0

[node name="Skills" type="Node" parent="."]

[node name="Audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )
[connection signal="moved" from="." to="Stats" method="_on_Player_moved"]
[connection signal="stopped" from="." to="Stats" method="_on_Player_stopped"]
[connection signal="health_changed" from="Stats" to="CanvasLayer/BarUI" method="_on_Stats_health_changed"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="timeout" from="StopTimer" to="." method="_on_StopTimer_timeout"]
[connection signal="timeout" from="Weapon/AttackSpeed" to="." method="_on_AttackSpeed_timeout"]
[connection signal="area_entered" from="Hurtbox" to="Hurtbox" method="_on_Hurtbox_area_entered"]
[connection signal="area_entered" from="Hurtbox" to="Stats" method="_on_Hurtbox_area_entered"]
[connection signal="body_entered" from="Hurtbox" to="Stats" method="_on_Hurtbox_body_entered"]

[editable path="Weapon"]

[editable path="Hurtbox"]
